--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#000000">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
 
     <meta name="description" content="Bitcoin Multisig" />
     <title>Unchained Capital - Bitcoin Multisig</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicons/favicon-16x16.png">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="mask-icon" href="%PUBLIC_URL%/images/favicons/safari-pinned-tab.svg" color="#387EEC">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicons/favicon.ico">
-    <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/images/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/images/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/images/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="mask-icon"
+      href="%PUBLIC_URL%/images/favicons/safari-pinned-tab.svg"
+      color="#387EEC"
+    />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicons/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <meta
+      name="msapplication-config"
+      content="%PUBLIC_URL%/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <noscript>
