fix(other): update page title
Update the page title to "Caravan - Bitcoin Multisig".

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
 
     <meta name="description" content="Bitcoin Multisig" />
-    <title>Unchained Capital - Bitcoin Multisig</title>
+    <title>Caravan - Bitcoin Multisig</title>
 
     <link
       rel="apple-touch-icon"
