fix(other): update html meta description text

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta name="description" content="Bitcoin Multisig" />
+    <meta name="description" content="Caravan is the easiest Bitcoin multisig wallet you can use right in the browser" />
     <title>Caravan - Bitcoin Multisig</title>
 
     <link
