refactor(build): remove CRA code and add vite packages and configs

--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/images/favicons/apple-touch-icon.png"
+      href="/images/favicons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/images/favicons/favicon-32x32.png"
+      href="/images/favicons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/images/favicons/favicon-16x16.png"
+      href="/images/favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <link
       rel="mask-icon"
-      href="%PUBLIC_URL%/images/favicons/safari-pinned-tab.svg"
+      href="/images/favicons/safari-pinned-tab.svg"
       color="#387EEC"
     />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicons/favicon.ico" />
+    <link rel="shortcut icon" href="/images/favicons/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <meta
       name="msapplication-config"
-      content="%PUBLIC_URL%/browserconfig.xml"
+      content="/browserconfig.xml"
     />
     <meta name="theme-color" content="#ffffff" />
   </head>
@@ -47,5 +47,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="app"></div>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
